# agent-rebel

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
blog/: index.html
changelog/: index.html
contributing/: index.html
dialogues/a-chat-2025-06-15-unknown/: index.html
dialogues/aturn-chat-2025-06-15-unknown/: index.html
dialogues/chat-2025-06-06-llama3.2/: index.html
dialogues/chat-2025-06-06-nousresearch-deephermes-3-mistral-24b-preview-free/: index.html
dialogues/chat-2025-06-13-deepseek-deepseek-r1-0528-qwen3-8b-free/: index.html
dialogues/chat-2025-06-13-google-gemma-3-1b-it-free/: index.html
dialogues/chat-2025-06-14-deepseek-deepseek-r1-0528-qwen3-8b-free/: index.html
dialogues/chat-2025-06-14-google-gemma-3-1b-it-free/: index.html
dialogues/chat-2025-06-14-nousresearch-deephermes-3-mistral-24b-preview-free/: index.html
dialogues/chat-2025-06-15-deepseek-r1-0528/: index.html
dialogues/chat-2025-06-15-gemma-3-1b-it/: index.html
dialogues/chat-june-02/: index.html
dialogues/chat-june-02-deephermes/: index.html
dialogues/chat-may-31/: index.html
dialogues/connect-chat-2025-06-15-unknown/: index.html
dialogues/debate-chat-2025-06-15-unknown/: index.html
dialogues/dialogue1-2025-05-22/: index.html
dialogues/dialogue2-2025-05-23/: index.html
docs/: changelog.md  index.md
docs/js/: nav-target-blank.js
resume/: cover.html  index.html  package-lock.json  package.json  resume.json
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
styles/: main-bg.css
(+88 files in other folders)
